--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
 
 <header>
-  <img src="f23d6c2d-ec50-487a-9a06-1be9515ecb0a.png" alt="Logo Quinca Plus">
+  <img src="logo-transparent.png" alt="Logo Quinca Plus">
   <h1>QUINCA PLUS</h1>
 </header>
 
