--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quinca Plus - Accueil</title>
+  <title>QUINCA PLUS - Accueil</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -20,13 +20,15 @@
       color: gold;
     }
     header img {
-      height: 80px;
-      margin-right: 1rem;
+      height: 100px;
+      max-height: 100px;
+      margin-right: 2rem;
     }
     header h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
+      font-size: 3rem;
+      font-weight: 900;
       margin: 0;
+      text-transform: uppercase;
     }
     .hero {
       text-align: center;
@@ -82,7 +84,7 @@
 </section>
 
 <footer>
-  &copy; 2025 Quinca Plus — Tous droits réservés.
+  &copy; 2025 QUINCA PLUS — Tous droits réservés.
 </footer>
 
 </body>
