--- a/index.html
+++ b/index.html
@@ -78,7 +78,19 @@
 <section class="hero">
   <h2>Entreprise familiale depuis 1994</h2>
   <p>
-    Fondée par une femme audacieuse et visionnaire, Quinca Plus a su s'imposer dans un univers technique dominé par les hommes. Aujourd’hui, nous sommes fiers de proposer une large gamme de produits de qualité pour le bâtiment, l’ameublement, les fixations, la peinture, et bien plus encore.
+    <p>
+  Fondée par <strong>Joëlle Tholozan</strong>, une femme audacieuse et visionnaire, QUINCA PLUS est née en 1994 d’un simple rêve et d’une volonté de fer. Dans un monde de la quincaillerie largement dominé par les hommes, elle s’est lancée seule, avec seulement un peu d’argent, beaucoup de courage et une détermination inébranlable. Sans appui, sans associé, elle a bâti pierre par pierre une entreprise solide, respectée et incontournable.
+</p>
+<p>
+  Joëlle n’a pas hérité d’un empire, elle l’a créé. À force de persévérance, elle a su gagner la confiance des artisans, des bricoleurs et des professionnels du bâtiment. Elle a sélectionné les meilleurs produits, conseillé chaque client avec humanité, et imposé sa vision du service et de la qualité.
+</p>
+<p>
+  Aujourd’hui, QUINCA PLUS est bien plus qu’une simple quincaillerie : c’est une entreprise familiale fière de ses racines, à l’écoute de ses clients, portée par des valeurs de travail, d’exigence et d’authenticité. Que vous soyez professionnel ou particulier, vous trouverez chez nous une sélection pointue de produits pour le bâtiment, l’ameublement, la fixation, la peinture, les colles, l’électroportatif et bien plus encore.
+</p>
+<p>
+  Joëlle Tholozan a su transformer un petit local et un stock modeste en un véritable acteur de confiance dans sa région. Son parcours est une preuve éclatante qu’avec du cœur, du talent et de l’audace, on peut déplacer des montagnes.
+</p>
+
   </p>
   <a href="produits.html" class="btn">Voir nos produits</a>
 </section>
